tests/negative/test_type_arr_size_zero.orb
let i32[0] a;

fnc main() {}